ec2-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for Articles API EC2 instance'

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: An existing EC2 KeyPair to enable SSH access
  InstanceType:
    Type: String
    Default: t3.medium
    Description: EC2 instance type
    AllowedValues:
      - t3.medium

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Articles API
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: SSH access
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
          Description: API access
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: HTTPS access

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c55b159cbfafe1f0
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/sh
          apk update
          apk add --no-cache nodejs npm git docker docker-compose
          cd /home/ec2-user
          git clone <your-repo-url> articles-api
          cd articles-api
          npm install
          npm run build
          docker compose up -d

Outputs:
  InstanceId:
    Description: Instance ID
    Value: !Ref EC2Instance

  PublicIP:
    Description: Public IP address of the instance
    Value: !GetAtt EC2Instance.PublicIp

  APIEndpoint:
    Description: API endpoint URL
    Value: !Sub 'http://${EC2Instance.PublicIp}:3000'

  SwaggerDocsURL:
    Description: Swagger documentation URL
    Value: !Sub 'http://${EC2Instance.PublicIp}:3000/api-docs'
